midterm - final version (1)

--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
       <div id="intro">
         <h1>New York State Outdoor Attractions</h1>
         <h2 id = 'attraction-feature'></h2>
-        <p id = 'info' class="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p id = 'info' class="main"></p>
       </div>
     </div>
-    <button id = 'previous-button'></button>
+    <button id = 'previous-button'>PREVIOUS</button>
     <button id = 'next-button' class = 'button-next-1'>NEXT</button>
     <!-- Map -->
     <div id="map" class="map"></div>
+    <legend id = 'final-legend' class = 'legend-style'><h3>LEGEND</h3>
+      <p class = 'legend-elements'>Horseback Riding</p>
+      <p class = 'legend-elements'>Sightseeing</p>
+      <p class = 'legend-elements'>Water Activities</p>
+      <p class = 'legend-elements'>Hiking Trails</p>
+      <p class = 'legend-elements'>Camping & Picnics</p>
+      <i class = 'circle-icon-equestrian'></i>
+      <i class = 'circle-icon-sightseeing'></i>
+      <i class = 'circle-icon-water'></i>
+      <i class = 'circle-icon-hiking'></i>
+      <i class = 'circle-icon-camping'></i>
+    </legend>
+
     <!-- Javascript Imports -->
     <script src="js/jquery-2.2.0.js"></script>
     <script src="js/underscore.js"></script>
     <script src="js/leaflet.js"></script>
-    <script src="js/main.js"></script>
+    <!--<script src="js/main.js"></script>-->
+    <script src="js/main_2.js"></script>
   </body>
 </html>
