Midterm Alterations for HW
create custom leaflet popups
remove some unnecessary document.getElementByID
next button formatting
remove spaces around equal signs in the HTML

--- a/index.html
+++ b/index.html
@@ -13,25 +13,29 @@
     <div class="sidebar">
       <div id="intro">
         <h1>New York State Outdoor Attractions</h1>
-        <h2 id = 'attraction-feature'></h2>
-        <p id = 'info' class="main"></p>
+        <h2 id='attraction-feature'></h2>
+        <p id='info' class="main"></p>
       </div>
     </div>
-    <button id = 'previous-button'>PREVIOUS</button>
-    <button id = 'next-button' class = 'button-next-1'>NEXT</button>
-    <!-- Map -->
+    <div class='button-section'>
+      <button id='previous-button'>PREVIOUS</button>
+      <button id='next-button'>NEXT</button>
+    </div>
+
+
+        <!-- Map -->
     <div id="map" class="map"></div>
-    <legend id = 'final-legend' class = 'legend-style'><h3>LEGEND</h3>
-      <p class = 'legend-elements'>Horseback Riding</p>
-      <p class = 'legend-elements'>Sightseeing</p>
-      <p class = 'legend-elements'>Water Activities</p>
-      <p class = 'legend-elements'>Hiking Trails</p>
-      <p class = 'legend-elements'>Camping & Picnics</p>
-      <i class = 'circle-icon-equestrian'></i>
-      <i class = 'circle-icon-sightseeing'></i>
-      <i class = 'circle-icon-water'></i>
-      <i class = 'circle-icon-hiking'></i>
-      <i class = 'circle-icon-camping'></i>
+    <legend id='final-legend' class = 'legend-style'><h3>LEGEND</h3>
+      <p class='legend-elements'>Horseback Riding</p>
+      <p class='legend-elements'>Sightseeing</p>
+      <p class='legend-elements'>Water Activities</p>
+      <p class='legend-elements'>Hiking Trails</p>
+      <p class='legend-elements'>Camping & Picnics</p>
+      <i class='circle-icon-equestrian'></i>
+      <i class='circle-icon-sightseeing'></i>
+      <i class='circle-icon-water'></i>
+      <i class='circle-icon-hiking'></i>
+      <i class='circle-icon-camping'></i>
     </legend>
 
     <!-- Javascript Imports -->
