more button stuff
dumb buttons....

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <button id='previous-button'>PREVIOUS</button>
       <button id='next-button'>NEXT</button>
     </div>
+    <!--I tried to alter the positioning with the code above but that results is some other button issues, including the previous and nexts buttons showing up unformatted on the first slide and last slide, respectively-->
+    <!-- <button id='previous-button'>PREVIOUS</button>
+    <button id='next-button'>NEXT</button> -->
 
 
         <!-- Map -->
