--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <div id="intro">
-        <h1>2016 Philadelphia Crash Fatalities</h1>
+        <h1>PHILADELPHIA CRASH FATALITIES October 2015 - March 2016</h1>
         <h4 id='filter-heading'></h4>
         <p id='info' class="main">This map represents Philadelphia deaths resulting from crashes. You can filter through the deaths by the victim's gender, day of the week of the crash, or the type of crash. You can also click on individual points to view additional details about the crash and the victim.</p>
       </div>
